--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
+    "@splidejs/splide": "^4.1.4",
     "astro": "^3.1.2",
     "tailwindcss": "^3.3.3"
   }
