--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@splidejs/splide": "^4.1.4",
     "astro": "^3.1.2",
+    "preact": "^10.18.1",
     "tailwindcss": "^3.3.3"
   }
 }
