--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^3.0.4",
     "@astrojs/preact": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@splidejs/splide": "^4.1.4",
